# LightYear

./: .gitignore  .travis.yml  README.md  travis.yml
 DevTest Game/: DevTest.sqlite  README.txt  Story.txt
Core CPP/: MetaInformation.cpp  MetaInformation.h  README.md  UpdateString.cpp  UpdateString.h
Marketing/Miscellaneous/: LightYear Project Technical Plan.afdesign  LightYear Project W10 Interop Detail Alt.afdesign  LightYear Project W10 Interop Detail.afdesign
OS X/: persistance.txt
OS X/Light Year/Light Year/: AppDelegate.h  AppDelegate.m  CustomClassStructure.cpp  CustomClassStructure.h  Info.plist  MainMenu.h  MainMenu.m  MainView.h  MainView.mm  MetaInformation.cpp  MetaInformation.h  ObjectActionCreator.h  ObjectActionCreator.m  ObjectsCollectionViewItem.h  ObjectsCollectionViewItem.m  ReceiveInput.h  UpdateString.cpp  ViewController.h  ViewController.m  main.m
OS X/Light Year/Light Year.xcodeproj/: project.pbxproj
OS X/Light Year/Light Year.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OS X/Light Year/Light Year/Base.lproj/: Main.storyboard
OS X/Light Year/Light YearTests/: Light_YearTests.m
OS X/Light Year/Light YearUITests/: Light_YearUITests.m
OS X/Light-Year/Light Year.xcodeproj/: project.pbxproj
OS X/Light-Year/Light-Year/: AppDelegate.h  CustomClassStructure.h  Info.plist  MainView.h  MainView.m  MainView.mm  MainWindow.h  MainWindow.mm  MainWindow_CInterface.h  MetaInformation.h  ReceiveInput.cpp  UpdateString.cpp  UpdateString.h  UpdateString.hpp  UpdateStringLiaison.h  UpdateStringLiaison.mm  ViewController.h  ViewController.m  main.m
OS X/Light-Year/Light-Year.xcodeproj/: project.pbxproj
OS X/Light-Year/Light-YearTests/: Light_YearTests.m
OS X/Light-Year/Light-YearUITests/: Light_YearUITests.m
Project/Client/: README.md
Project/Client/Assets/: LightYear GUI.afdesign  dutch-nl.localized  english-us.localized
Project/Client/LightYear/: CMakeLists.txt  README.md
Project/Concepts/: LightYear Select Game Window Moc.afdesign
Project/Prototype_Designer/Light Year/: Info.plist  MainMenu.h  ViewController.m  main.m
Project/Prototype_Designer/Light Year.xcodeproj/: project.pbxproj
Project/Prototype_Player/Thousand Days and a Day Prototype/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
Project/Prototype_Player/Thousand Days and a Day Prototype.xcodeproj/: project.pbxproj
Project/Prototype_Player/Thousand Days and a Day PrototypeTests/: Thousand_Days_and_a_Day_PrototypeTests.m
Project/Prototype_Player/Thousand Days and a Day PrototypeUITests/: Thousand_Days_and_a_Day_PrototypeUITests.m
Project/Universal/: .gitignore
Project/Universal/Assets/:  LightYear GUI.afdesign
Project/Universal/LightYear/: CMakeLists.txt  README.md
Project/Universal/LightYear Build/: CMakeCache.txt  Makefile  cmake_install.cmake
Project/Universal/LightYear/include/LightYear/: CoreLoopDelegate.h  InputManager.h  LexicalManager.h  LocalizationManager.h  RenderingManager.h  WindowManager.h
Project/Universal/LightYear/lib/kiss_sdl-0.10.4/: kiss_sdl.h
Project/Universal/LightYear/lib/kiss_sdl-1.0.12/: kiss_draw.c  kiss_general.c  kiss_sdl.h  kiss_widgets.c
Project/Universal/LightYear/lib/kiss_sdl-1.0.4/: kiss_draw.c  kiss_sdl.h
Project/Universal/LightYear/resources/: english-us.localized
Project/Universal/LightYear/src/: CoreLoopDelegate.cpp  EventManager.cpp  InputManager.cpp  LexicalManager.cpp  LocalizationManager.cpp  LoopController.cpp  RenderingManager.cpp  main.cpp
Windows/Light-Year/: Light-Year.sln
Windows/Light-Year/Light-Year/: Light-Year.csproj  MainView.Designer.cs  MainView.cs  Program.cs
(+75 files in other folders)
